everything working great - with delete

--- a/app/views/employments/index.html.erb
+++ b/app/views/employments/index.html.erb
@@ -12,6 +12,7 @@
       <th>Person</th>
       <th>Job Title</th>
       <th>Location</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -21,6 +22,7 @@
         <td><em><%= employment.person.full_name %></em></td>
         <td><em><%= employment.job_title.name %></em></td>
         <td><em><%= employment.location.name %></em></td>
+        <td><%= link_to "Delete", employment, method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
